buity last commit

--- a/markup/index.html
+++ b/markup/index.html
@@ -26,9 +26,290 @@
                 </div>
             </div>
         </div>
+        <div class="second_section">
+            <div class="container">
+                <div class="telle_section">
+                    <div class="logo">
+                        <a href="./index.html"><img src="../markup/images/logo/Group2.svg" alt="logo"></a>
+                    </div>
+                    <div class="telle_sec">
+                        <div class="tell_in_telle">
+                            <a class="tell" href="tel:+12131234567">+1 (213) 123-45-67</a>
+                        </div>
+                        <div class="btn_in_telle">
+                            <div class="btn_1">
+                                <a class="btn" href="#">Call back</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="third_section">
+            <div class="container">
+                <div>
+                    <nav class="second_nav">
+                        <ul class="top_navigation">
+                            <li><a href="#">Salon</a></li>
+                            <li><a href="#">Barbershop</a></li>
+                            <li><a href="#">Manicure</a></li>
+                            <li><a href="#">Pedicure</a></li>
+                            <li><a href="#">Massage</a></li>
+                            <li><a href="#">Furniture</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
     </header>
     <main>
-
+        <div class="super_chair">
+            <div class="container">
+                <div class="chair_top">
+                    <div class="about_super_chair">
+                        <h1>Super chair</h1>
+                        <p>The text of the action always reflects the essence, and not just
+                            chatter, so be careful</p>
+                    </div>
+                    <div class="btn_2">
+                        <a class="btn" href="#">More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="goods_chair">
+            <div class="container">
+                <h2>Special offers</h2>
+                <div class="cards">
+                    <ul class="chair_cards">
+                        <li>
+                            <img src="../markup/images/Rectangle_4.png" alt="chair">
+                            <p>Hairdressing chair "Norm" hydraulic</p>
+                            <span class="price">$300</span>
+                            <div class="btn_in_chair">
+                                <a class="btn" href="#">Buy</a>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="../markup/images/Rectangle_4.png" alt="chair">
+                            <p>Hairdressing chair "Norm" hydraulic</p>
+                            <span class="price">$300</span>
+                            <div class="btn_in_chair">
+                                <a class="btn" href="#">Buy</a>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="../markup/images/Rectangle_4.png" alt="chair">
+                            <p>Hairdressing chair "Norm" hydraulic</p>
+                            <span class="price">$300</span>
+                            <div class="btn_in_chair">
+                                <a class="btn" href="#">Buy</a>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="../markup/images/Rectangle_4.png" alt="chair">
+                            <p>Hairdressing chair "Norm" hydraulic</p>
+                            <span class="price">$300</span>
+                            <div class="btn_in_chair">
+                                <a class="btn" href="#">Buy</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="main_post_section">
+            <div class="container">
+                <div class="bonuses">
+                    <ul class="bonus">
+                        <li class="first_bonus">
+                            <div class="bonus_mail">
+                                <h3>Get bonuses and gifts</h3>
+                            <p>Every month we play $1000 for our clients</p>
+                            <form action="post">
+                                <input class="bonus_in_emaill" type="email" placeholder="Enter your e-mail">
+                            </form>
+                            </div>
+                            <div class="bonus_img">
+                                <img src="../markup/images/icons/Group.svg" alt="email">
+                            </div>
+                        </li>
+                        <li class="second_bonus">
+                            <div class="bonus_map">
+                                <h3>Visit us</h3>
+                            <p>Over 300 stores throughout the USA</p>
+                            <div class="btn_2">
+                                <a class="btn" href="#">Store map</a>
+                            </div>
+                            </div>
+                            <div class="bonus_img">
+                                <img src="../markup/images/icons/Vector.svg" alt="map">
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="rectangle">
+            <div class="container">
+                <div class="table_impuls">
+                    <table class="chair_impulse">
+                        <tbody>
+                            <tr>
+                                <td><a class="pulse_i" href="../markup/index.html"><img src="../markup/images/impulse.png" alt="impulse"></a></td>
+                                <td><a class="pulse_i" href="../markup/index.html"><img src="../markup/images/impulse.png" alt="impulse"></a></td>
+                                <td><a class="pulse_i" href="../markup/index.html"><img src="../markup/images/impulse.png" alt="impulse"></a></td>
+                                <td><a class="pulse_i" href="../markup/index.html"><img src="../markup/images/impulse.png" alt="impulse"></a></td>
+                            </tr>
+                            <tr>
+                                <td><a class="pulse_i" href="../markup/index.html"><img src="../markup/images/impulse.png" alt="impulse"></a></td>
+                                <td><a class="pulse_i" href="../markup/index.html"><img src="../markup/images/impulse.png" alt="impulse"></a></td>
+                                <td><a class="pulse_i" href="../markup/index.html"><img src="../markup/images/impulse.png" alt="impulse"></a></td>
+                                <td><a class="pulse_i" href="../markup/index.html"><img src="../markup/images/impulse.png" alt="impulse"></a></td>
+                            </tr>
+                            <tr>
+                                <td><a class="pulse_i" href="../markup/index.html"><img src="../markup/images/impulse.png" alt="impulse"></a></td>
+                                <td><a class="pulse_i" href="../markup/index.html"><img src="../markup/images/impulse.png" alt="impulse"></a></td>
+                                <td><a class="pulse_i" href="../markup/index.html"><img src="../markup/images/impulse.png" alt="impulse"></a></td>
+                                <td><a class="pulse_i" href="../markup/index.html"><img src="../markup/images/impulse.png" alt="impulse"></a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="goods_chair">
+            <div class="container">
+                <h2>Have you recently viewed</h2>
+                <div class="cards">
+                    <ul class="chair_cards">
+                        <li>
+                            <img src="../markup/images/Rectangle_4.png" alt="chair">
+                            <p>Hairdressing chair "Norm" hydraulic</p>
+                            <span class="price">$300</span>
+                            <div class="btn_in_chair">
+                                <a class="btn" href="#">Buy</a>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="../markup/images/Rectangle_4.png" alt="chair">
+                            <p>Hairdressing chair "Norm" hydraulic</p>
+                            <span class="price">$300</span>
+                            <div class="btn_in_chair">
+                                <a class="btn" href="#">Buy</a>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="../markup/images/Rectangle_4.png" alt="chair">
+                            <p>Hairdressing chair "Norm" hydraulic</p>
+                            <span class="price">$300</span>
+                            <div class="btn_in_chair">
+                                <a class="btn" href="#">Buy</a>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="../markup/images/Rectangle_4.png" alt="chair">
+                            <p>Hairdressing chair "Norm" hydraulic</p>
+                            <span class="price">$300</span>
+                            <div class="btn_in_chair">
+                                <a class="btn" href="#">Buy</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </main>
+    <footer>
+        <div class="foot_sec">
+            <div class="container">
+                <div class="categori">
+                    <div class="footer_categories">
+                        <h3>Popular categories</h3>
+                        <nav>
+                            <ul class="foot_nav">
+                                <li><a href="#">Hozzles</a></li>
+                                <li><a href="#">Tools</a></li>
+                                <li><a href="#">Gel polishes</a></li>
+                                <li><a href="#">Design</a></li>
+                                <li><a href="#">Building</a></li>
+                                <li><a href="#">Equipment</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer_categories">
+                        <h3>Popular categories</h3>
+                        <nav>
+                            <ul class="foot_nav">
+                                <li><a href="#">Hozzles</a></li>
+                                <li><a href="#">Tools</a></li>
+                                <li><a href="#">Gel polishes</a></li>
+                                <li><a href="#">Design</a></li>
+                                <li><a href="#">Building</a></li>
+                                <li><a href="#">Equipment</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer_categories">
+                        <h3>Popular categories</h3>
+                        <nav>
+                            <ul class="foot_nav">
+                                <li><a href="#">Hozzles</a></li>
+                                <li><a href="#">Tools</a></li>
+                                <li><a href="#">Gel polishes</a></li>
+                                <li><a href="#">Design</a></li>
+                                <li><a href="#">Building</a></li>
+                                <li><a href="#">Equipment</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer_categories">
+                        <h3>Popular categories</h3>
+                        <nav>
+                            <ul class="foot_nav">
+                                <li><a href="#">Hozzles</a></li>
+                                <li><a href="#">Tools</a></li>
+                                <li><a href="#">Gel polishes</a></li>
+                                <li><a href="#">Design</a></li>
+                                <li><a href="#">Building</a></li>
+                                <li><a href="#">Equipment</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="second_section_footer">
+            <div class="container">
+                <div class="telle_section">
+                    <div class="icn_sec">
+                        <a class="icn" href="#"><img src="../markup/images/icons/youtu.svg" alt="facebook"></a>
+                        <a class="icn" href="#"><img src="../markup/images/icons/facebook.svg" alt="facebook"></a>
+                        <a class="icn" href="#"><img src="../markup/images/icons/instagram.svg" alt="facebook"></a>
+                    </div>
+                    <div class="telle_sec">
+                        <div class="tell_in_telle">
+                            <a class="tell" href="tel:+12131234567">+1 (213) 123-45-67</a>
+                        </div>
+                        <div class="btn_in_telle">
+                            <div class="btn_1">
+                                <a class="btn" href="#">Call back</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="privat">
+            <div class="container">
+                <div class="left_p">
+                    <p>Best Store (c) 2019 All rights reserved. Online store of equipment for beauty salons</p>
+                </div>
+                <div class="right_p">
+                    <p>Privacy Policy</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
